src/main/java/com/example/demo/__core/errors/except/Ex404.java
package com.example.demo.__core.errors.except;

public class Ex404 extends RuntimeException{
	public Ex404(String msg) {
		super(msg);
	}
}

